--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -22,12 +22,12 @@
             </form>
             <div id="loginMsg" class="mt-2 small text-danger"></div>
             <div class="mt-3 text-center">
-                <a href="#" onclick="showRegister()">Non hai un account? Registrati</a>
+                <a href="#" onclick="showSection('registerSection')">Non hai un account? Registrati</a>
             </div>
         </div>
 
         <!-- Register Section (initially hidden) -->
-        <div id="registerSection" class="card mx-auto p-4 shadow d-none mt-3" style="max-width: 400px;">
+        <div id="registerSection" class="card mx-auto p-4 shadow d-none" style="max-width: 400px;">
             <h4 class="mb-3">Registrazione</h4>
             <form id="registerForm">
                 <input type="text" id="registerUsername" class="form-control mb-2" placeholder="Username" required />
@@ -62,9 +62,14 @@
         const apiUrl = "https://localhost:7194"; // Cambia se necessario
         let token = "";
 
-        function showRegister() {
-            document.getElementById("registerSection").classList.remove("d-none");
+        function showSection(sectionId) {
+            const sections = ["loginSection", "registerSection", "loanSection"];
+            sections.forEach(id => {
+                document.getElementById(id).classList.add("d-none");
+            });
+            document.getElementById(sectionId).classList.remove("d-none");
         }
+
 
         function logout() {
             token = "";
@@ -86,7 +91,16 @@
             });
 
             const msg = document.getElementById("registerMsg");
-            msg.textContent = res.ok ? "Registrazione completata! Ora accedi." : "Errore: email già registrata.";
+            if (res.ok) {
+                msg.textContent = "Registrazione completata! Ora accedi.";
+                setTimeout(() => {
+                    msg.textContent = "";
+                    showSection("loginSection");
+
+                }, 1000);
+            } else {
+                msg.textContent = "Errore: sei già registrato!";
+            }
         });
 
         // Login
@@ -106,9 +120,8 @@
 
             if (res.ok) {
                 token = data.token;
-                document.getElementById("loginSection").classList.add("d-none");
-                document.getElementById("loanSection").classList.remove("d-none");
                 msg.textContent = "";
+                showSection("loanSection");
             } else {
                 msg.textContent = "Credenziali non valide.";
             }
@@ -136,6 +149,10 @@
                 ? `Rata Mensile: € ${data.rataMensile.toFixed(2)}`
                 : "Errore nella simulazione.";
         });
+
+        window.onload = () => {
+            showSection("loginSection");
+        };
     </script>
 
 </body>
