--- a/wwwroot/admin.html
+++ b/wwwroot/admin.html
@@ -2,22 +2,41 @@
 <html lang="it">
 <head>
     <meta charset="UTF-8" />
-    <title>SmartLoan - Dashboard Admin</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Admin Dashboard - SmartLoan</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
-<body>
+<body class="bg-light">
     <div class="container py-5">
-        <h2>Gestione richieste prestito</h2>
-        <div class="table-responsive mt-3">
-            <table class="table table-bordered">
-                <thead>
+        <div class="d-flex justify-content-between align-items-center mb-4">
+            <h2>Dashboard Admin</h2>
+            <button onclick="logout()" class="btn btn-outline-danger">Logout</button>
+        </div>
+
+        <div class="mb-4">
+            <canvas id="statusChart" height="100"></canvas>
+        </div>
+
+        <div class="d-flex justify-content-between align-items-center mb-2">
+            <h4>Richieste di Prestito</h4>
+            <select id="statusFilter" class="form-select w-auto" onchange="filterRequests()">
+                <option value="">Tutti</option>
+                <option value="Approvata">Approvate</option>
+                <option value="Rifiutata">Rifiutate</option>
+                <option value="In attesa">In attesa</option>
+            </select>
+        </div>
+
+        <div class="table-responsive">
+            <table class="table table-bordered table-hover align-middle">
+                <thead class="table-dark">
                     <tr>
                         <th>ID</th>
                         <th>Utente</th>
                         <th>Importo</th>
-                        <th>Durata</th>
-                        <th>Rata</th>
+                        <th>Durata (mesi)</th>
+                        <th>Rata Mensile</th>
                         <th>Stato</th>
                         <th>Azioni</th>
                     </tr>
@@ -25,9 +44,11 @@
                 <tbody id="requestTable"></tbody>
             </table>
         </div>
-        <button onclick="window.location.href='login.html'" class="btn btn-danger">Logout</button>
+
+        <div id="adminMsg" class="text-danger mt-3 fw-bold"></div>
     </div>
-    <script src="js/jwt.js"></script>
-    <script src="js/request.js"></script>
+
+    <script src="js/config.js"></script>
+    <script src="js/admin.js"></script>
 </body>
 </html>
