--- a/wwwroot/loan.html
+++ b/wwwroot/loan.html
@@ -12,7 +12,6 @@
         <div class="card mx-auto p-4 shadow" style="max-width: 500px;">
             <form id="loanForm">
                 <input type="number" step="0.01" id="importo" class="form-control mb-2" placeholder="Importo (€)" required />
-                <input type="number" step="0.01" id="tasso" class="form-control mb-2" placeholder="Tasso Annuale (%)" required />
                 <input type="number" id="mesi" class="form-control mb-3" placeholder="Durata (mesi)" required />
                 <button type="submit" class="btn btn-warning w-100">Calcola Rata</button>
             </form>
@@ -25,5 +24,6 @@
     </div>
     <script src="js/jwt.js"></script>
     <script src="js/loan.js"></script>
+    <script src="js/config.js"></script>
 </body>
 </html>
