--- a/wwwroot/login.html
+++ b/wwwroot/login.html
@@ -5,24 +5,76 @@
     <title>SmartLoan - Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <style>
+        body {
+            background: linear-gradient(to right, #8fd3f4, #84fab0);
+            transition: background-color 0.3s ease;
+        }
+
+        .card {
+            transition: all 0.3s ease;
+        }
+
+        input:focus {
+            box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+            transition: box-shadow 0.3s ease;
+        }
+
+        button:hover {
+            transform: scale(1.02);
+            transition: transform 0.2s ease-in-out;
+        }
+
+        /* Dark Mode */
+        .dark-mode {
+            background-color: #121212 !important;
+            color: white !important;
+        }
+
+            .dark-mode .card {
+                background-color: #1e1e1e;
+                border: 1px solid #333;
+            }
+
+            .dark-mode input, .dark-mode button {
+                background-color: #2a2a2a;
+                color: white;
+            }
+    </style>
 </head>
 <body class="bg-light">
     <div class="container py-5">
-        <h1 class="text-center mb-4">SmartLoan</h1>
+        <h1 class="text-center mb-4">
+            <img src="images/logo.svg" alt="SmartLoan Logo" width="40" class="me-2" />
+            SmartLoan
+        </h1>
         <div class="card mx-auto p-4 shadow" style="max-width: 400px;">
-            <h4 class="mb-3">Accedi</h4>
+            <h4 class="mb-3 text-center">Benvenuto!</h4>
             <form id="loginForm">
                 <input type="text" id="loginUsername" class="form-control mb-2" placeholder="Username" required />
                 <input type="password" id="loginPassword" class="form-control mb-3" placeholder="Password" required />
-                <button type="submit" class="btn btn-success w-100">Login</button>
+                <button type="submit" class="btn btn-success w-100" id="loginBtn">
+                    <span class="spinner-border spinner-border-sm d-none" id="loginSpinner" role="status"></span>
+                    <span id="loginBtnText">Login</span>
+                </button>
             </form>
-            <div id="loginMsg" class="mt-2 small text-danger"></div>
+            <div id="loginMsg" class="mt-2 small text-danger text-center"></div>
             <div class="mt-3 text-center">
                 <a href="register.html">Non hai un account? Registrati</a>
             </div>
         </div>
+        <div class="text-center mt-4">
+            <button onclick="toggleDarkMode()" class="btn btn-outline-dark btn-sm">🌓 Cambia tema</button>
+        </div>
     </div>
+
     <script src="js/jwt.js"></script>
+    <script src="js/config.js"></script>
     <script src="js/auth.js"></script>
+    <script>
+        function toggleDarkMode() {
+            document.body.classList.toggle("dark-mode");
+        }
+    </script>
 </body>
 </html>
