--- a/wwwroot/request.html
+++ b/wwwroot/request.html
@@ -24,5 +24,6 @@
     </div>
     <script src="js/jwt.js"></script>
     <script src="js/request.js"></script>
+    <script src="js/config.js"></script>
 </body>
 </html>
