--- a/wwwroot/admin.html
+++ b/wwwroot/admin.html
@@ -14,8 +14,8 @@
             <button onclick="logout()" class="btn btn-outline-danger">Logout</button>
         </div>
 
-        <div class="mb-4">
-            <canvas id="statusChart" height="100"></canvas>
+        <div class="mb-4 d-flex justify-content-center align-items-center" style="height: 500px">
+            <canvas id="statusChart" style="height: 50px"></canvas>
         </div>
 
         <div class="d-flex justify-content-between align-items-center mb-2">
