--- a/wwwroot/loan.html
+++ b/wwwroot/loan.html
@@ -5,6 +5,42 @@
     <title>SmartLoan - Simulazione Prestito</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <style>
+        body {
+            background: linear-gradient(to right, #8fd3f4, #84fab0);
+            transition: background-color 0.3s ease;
+        }
+
+        .card {
+            transition: all 0.3s ease;
+        }
+
+        input:focus {
+            box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+            transition: box-shadow 0.3s ease;
+        }
+
+        button:hover {
+            transform: scale(1.02);
+            transition: transform 0.2s ease-in-out;
+        }
+
+        /* Dark Mode */
+        .dark-mode {
+            background-color: #121212 !important;
+            color: white !important;
+        }
+
+            .dark-mode .card {
+                background-color: #1e1e1e;
+                border: 1px solid #333;
+            }
+
+            .dark-mode input, .dark-mode button {
+                background-color: #2a2a2a;
+                color: white;
+            }
+    </style>
 </head>
 <body class="bg-light">
     <div class="container py-5">
