--- a/wwwroot/login.html
+++ b/wwwroot/login.html
@@ -63,18 +63,10 @@
                 <a href="register.html">Non hai un account? Registrati</a>
             </div>
         </div>
-        <div class="text-center mt-4">
-            <button onclick="toggleDarkMode()" class="btn btn-outline-dark btn-sm">🌓 Cambia tema</button>
-        </div>
     </div>
 
-    <script src="js/jwt.js"></script>
     <script src="js/config.js"></script>
-    <script src="js/auth.js"></script>
-    <script>
-        function toggleDarkMode() {
-            document.body.classList.toggle("dark-mode");
-        }
-    </script>
+    <script src="js/jwt.js"></script>
+    <script src="js/login.js"></script>
 </body>
 </html>
