--- a/wwwroot/login.html
+++ b/wwwroot/login.html
@@ -45,7 +45,7 @@
 <body class="bg-light">
     <div class="container py-5">
         <h1 class="text-center mb-4">
-            <img src="images/logo.svg" alt="SmartLoan Logo" width="40" class="me-2" />
+            <img src="images/logo.jpg" alt="SmartLoan Logo" width="100" class="me-2" />
             SmartLoan
         </h1>
         <div class="card mx-auto p-4 shadow" style="max-width: 400px;">
