--- a/wwwroot/loan.html
+++ b/wwwroot/loan.html
@@ -54,6 +54,7 @@
             <div id="loanResult" class="mt-3 text-info fw-bold"></div>
         </div>
         <div class="mt-3 text-end">
+            <button onclick="window.location.href='user.html'" class="btn btn-warning">Torna indietro</button>
             <button onclick="window.location.href='request.html'" class="btn btn-primary">Invia la richiesta</button>
             <button onclick="window.location.href='login.html'" class="btn btn-outline-danger">Logout</button>
         </div>
