--- a/wwwroot/request.html
+++ b/wwwroot/request.html
@@ -54,6 +54,7 @@
             <div id="requestMsg" class="mt-3 text-success fw-bold"></div>
         </div>
         <div class="mt-3 text-end">
+            <button onclick="window.location.href='user.html'" class="btn btn-warning">Torna indietro</button>
             <button onclick="window.location.href='loan.html'" class="btn btn-secondary">Nuova simulazione</button>
             <button onclick="window.location.href='login.html'" class="btn btn-outline-danger">Logout</button>
         </div>
