--- a/wwwroot/user.html
+++ b/wwwroot/user.html
@@ -9,36 +9,45 @@
 <body class="bg-light">
 
     <div class="container mt-5">
-        <h2 class="mb-4">Richieste di prestito</h2>
-
-        <div class="mb-4">
-            <button class="btn btn-primary me-2" id="simulateBtn">Simula Prestito</button>
-            <button class="btn btn-success" id="requestBtn">Richiedi Prestito</button>
+        <div class="d-flex justify-content-between align-items-center mb-4">
+            <h2>Richieste di prestito</h2>
             <button class="btn btn-outline-danger" id="logoutBtn">Logout</button>
         </div>
 
-        <div id="loanList" class="table-responsive">
+        <div class="mb-3">
+            <button class="btn btn-primary me-2" id="simulateBtn">Simula Prestito</button>
+            <button class="btn btn-success" id="requestBtn">Richiedi Prestito</button>
+        </div>
+
+        <input type="text" id="searchInput" class="form-control mb-3" placeholder="Cerca per importo, durata o stato..." />
+
+        <div id="loadingSpinner" class="text-center my-4 d-none">
+            <div class="spinner-border text-primary" role="status"></div>
+        </div>
+
+        <div class="table-responsive">
             <table class="table table-bordered table-hover">
                 <thead class="table-dark">
                     <tr>
                         <th>ID</th>
                         <th>Importo</th>
-                        <th>Durata (mesi)</th>
+                        <th>Durata</th>
                         <th>Stato</th>
                         <th>Data Richiesta</th>
                     </tr>
                 </thead>
                 <tbody id="loanTableBody">
-                    <!-- Popolamento dinamico da JS -->
+                    <!-- Popolamento dinamico -->
                 </tbody>
             </table>
         </div>
 
-        <div id="errorMsg" class="text-danger mt-3"></div>
+        <div id="errorMsg" class="mt-3"></div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/config.js"></script>
     <script src="js/jwt.js"></script>
     <script src="js/user.js"></script>
-    </body>
+</body>
 </html>
