Fixing enum status

--- a/wwwroot/admin.html
+++ b/wwwroot/admin.html
@@ -24,7 +24,7 @@
                 <option value="">Tutti</option>
                 <option value="Approvata">Approvate</option>
                 <option value="Rifiutata">Rifiutate</option>
-                <option value="In attesa">In attesa</option>
+                <option value="Pendente">Pendenti</option>
             </select>
         </div>
 
