--- a/wwwroot/admin.html
+++ b/wwwroot/admin.html
@@ -35,6 +35,7 @@
                         <th>ID</th>
                         <th>Utente</th>
                         <th>Importo</th>
+                        <th>Tipo Prestito</th>
                         <th>Durata (mesi)</th>
                         <th>Rata Mensile</th>
                         <th>Stato</th>
