--- a/wwwroot/user.html
+++ b/wwwroot/user.html
@@ -32,6 +32,7 @@
                         <th>ID</th>
                         <th>Importo</th>
                         <th>Durata</th>
+                        <th>Tipo Prestito</th>
                         <th>Stato</th>
                         <th>Data Richiesta</th>
                     </tr>
