--- a/wwwroot/register.html
+++ b/wwwroot/register.html
@@ -45,9 +45,32 @@
 <body class="bg-light">
     <div class="container py-5">
         <h1 class="text-center mb-4">SmartLoan</h1>
-        <div class="card mx-auto p-4 shadow" style="max-width: 400px;">
+        <div class="card mx-auto p-4 shadow" style="max-width: 500px;">
             <h4 class="mb-3">Registrati</h4>
             <form id="registerForm">
+                <div class="row">
+                    <div class="col-md-6 mb-2">
+                        <input type="text" id="name" class="form-control" placeholder="Nome" required />
+                    </div>
+                    <div class="col-md-6 mb-2">
+                        <input type="text" id="surname" class="form-control" placeholder="Cognome" required />
+                    </div>
+                </div>
+                <input type="text" id="indirizzo" class="form-control mb-2" placeholder="Indirizzo" required />
+                <div class="row">
+                    <div class="col-md-6 mb-2">
+                        <input type="text" id="citta" class="form-control" placeholder="Città" required />
+                    </div>
+                    <div class="col-md-3 mb-2">
+                        <input type="text" id="provincia" class="form-control" placeholder="Prov." maxlength="2" required />
+                    </div>
+                    <div class="col-md-3 mb-2">
+                        <input type="text" id="cap" class="form-control" placeholder="CAP" required />
+                    </div>
+                </div>
+                <input type="tel" id="telefono" class="form-control mb-2" placeholder="Telefono" required />
+                <label for="dataNascita" class="form-label">Data di nascita</label>
+                <input type="date" id="dataNascita" class="form-control mb-2" required />
                 <input type="text" id="registerUsername" class="form-control mb-2" placeholder="Username" required />
                 <input type="email" id="registerEmail" class="form-control mb-2" placeholder="Email" required />
                 <input type="password" id="registerPassword" class="form-control mb-3" placeholder="Password" required />
