--- a/wwwroot/user.html
+++ b/wwwroot/user.html
@@ -46,6 +46,20 @@
         <div id="errorMsg" class="mt-3"></div>
     </div>
 
+    <!-- Modal Motivazione -->
+    <div class="modal fade" id="motivazioneModal" tabindex="-1" aria-labelledby="motivazioneModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="motivazioneModalLabel">Motivazione della richiesta</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Chiudi"></button>
+                </div>
+                <div class="modal-body" id="motivazioneContent">
+                    <!-- Qui verrà inserita la motivazione -->
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/config.js"></script>
     <script src="js/jwt.js"></script>
