--- a/wwwroot/admin.html
+++ b/wwwroot/admin.html
@@ -41,6 +41,7 @@
                             <th>Durata (mesi)</th>
                             <th>Rata Mensile</th>
                             <th>Stato</th>
+                            <th>Documenti</th>
                             <th>Azioni</th>
                         </tr>
                     </thead>
