--- a/wwwroot/user.html
+++ b/wwwroot/user.html
@@ -36,6 +36,7 @@
                             <th>Tipo Prestito</th>
                             <th>Stato</th>
                             <th>Data Richiesta</th>
+                            <th>Documenti</th>
                         </tr>
                     </thead>
                     <tbody id="loanTableBody">
