--- a/wwwroot/request.html
+++ b/wwwroot/request.html
@@ -58,8 +58,18 @@
                         <option value="Abitazione">Mutuo Casa</option>
                         <option value="Altro">Altro</option>
                     </select>
+                    <div class="alert alert-info small mb-2">
+                        Per una corretta valutazione della richiesta, si prega di allegare obbligatoriamente:
+                        <ul class="mb-0 ps-3">
+                            <li>Documento d'identità</li>
+                            <li>Ultimo cedolino dello stipendio</li>
+                            <li>CUD</li>
+                        </ul>
+                    </div>
                     <input type="number" step="0.01" id="importo" class="form-control mb-2" placeholder="Importo (€)" required />
                     <input type="number" id="durata" class="form-control mb-3" placeholder="Durata (mesi)" required />
+                    <input type="file" id="documents" multiple />
+                    <div id="fileList" class="mt-2"></div>
                     <button type="submit" class="btn btn-primary w-100">Invia Richiesta</button>
                 </form>
                 <div id="requestMsg" class="mt-3 text-success fw-bold"></div>
