--- a/wwwroot/user.html
+++ b/wwwroot/user.html
@@ -34,6 +34,7 @@
                             <th>Importo</th>
                             <th>Durata</th>
                             <th>Tipo Prestito</th>
+                            <th>Rata Mensile</th>
                             <th>Stato</th>
                             <th>Data Richiesta</th>
                             <th>Documenti</th>
